<resources>
    <string name="app_name">LUMINOF</string>
    <string name="catalog">Каталог</string>
    <string name="payment">Оплата и доставка</string>
    <string name="contacts">Контакты</string>
    <string name="feedback">Обратная связь</string>
    <string name="main_screen_text">LUMINOF - Широкий ассортимент люминофора, флуоресцента, лака и у/ф ламп лучшего качества и по самой низкой цене!\n
\n
Люминофор - это светонакопительный пигмент, он обладает свойством излучать яркое свечение в темноте и под ультрафиолетом.\n
\n
Флуоресцент - светоотражающий пигмент который отражает обычный или ультрафиолетовый свет.</string>
    <string name="payment_fragment_title">Алгоритм действий покупателя:</string>
    <string name="payment_fragment_text5">1. *Оформляете заказ письменно в разделе \"Обратная связь\".</string>
    <string name="payment_fragment_text4">\nПерейти в раздел \"Обратная связь\"\n</string>
    <string name="payment_fragment_text3">
        Нужно указать цвет и **количество люминофора; название населённого пункта, номер телефона получателя, ФИО получателя и номер склада Новой Почты.\n
2. ***Оплачиваете\n
3. Получаете номер накладной.\n
4. ****Идёте на почту с паспортом или удостоверением водителя и забираете посылку.\n
</string>
    <string name="payment_fragment_text2">*Так же можно оформить заказ по телефону (но желательно письменно).\n
**Минимальный заказ 30 грамм.\n
***Оплата товара производится на карту ПриватБанк: 5168 7423 4666 5585, Лысенко Дмитрий Игоревич. Наложенный платёж возможен при минимальной предоплате 100 грн.\n
****Отправка посылки осуществляется Новой Почтой.</string>
    <string name="contacts_fragment_text">\n
Мы работаем с 8:00 до 20:00, 7 дней в неделю!\n
        \n
Наш специалист к Вашим услугам по номерам:\n
        \n
(093) 913-37-10 \n
\n
(096) 754-52-15 \n
\n
(050) 137-39-07 \n
\n
E-mail: luminofo@gmail.com</string>
    <string name="send_email">Отправка письма...</string>
    <string name="luminofor_title">Люминофор</string>
    <string name="luminofor">Люминофор - это светонакопительный пигмент, он обладает свойством излучать яркое свечение в темноте и под ультрафиолетом.\n\n
В наличии все цвета.</string>
    <string name="fluorescent_title">Флуоресцент</string>
    <string name="fluorescent">Флуоресцент - светоотражающий пигмент который отражает обычный или ультрафиолетовый свет.\n\n
В наличии светоотражающий и невидимый (маркировочный, светится под ультрафиолетом).</string>
    <string name="lak_title">Лак</string>
    <string name="lak">Универсальный акриловый лак на водной основе для: камня/бетона, дерева, бумаги, металла, пластика, стекла и пр.</string>
    <string name="detector_title">Ультрафиолетовый детектор, детектор валют, детектор денег, детектор купюр, детектор документов, проверка ультрафиолетом</string>
    <string name="detector">Переносной детектор валют. Размер 5х15 см. 2 режима: ультрафиолетовый (лампа типа BLB-T5/4W) и обычный (белый светодиод). Работает от  четырех батареек типа АА 1,5 W. Достоинством является его мобильность, а также небольшие размеры. То есть может применяться где угодно.</string>
    <string name="lampa_title">Ультрафиолетовая (УФ), цокольная лампа</string>
    <string name="lampa">Люминисцентная ультрафиолетовая лампа EBT-01. Стандартный цоколь, можно вкрутить в любой соответствующий патрон. Работает от обычной электросети 220 В. Её достоинства - мощность и яркость.\n\n
Напряжение: 220-240 В\n
Мощность: 26 Вт\n
Цоколь: Е27</string>
    <string name="marker_title">Невидимый ультрафиолетовый маркер с УФ подсветкой</string>
    <string name="marker">Ультрафиолетовый маркер со встроенным УФ фонариком. Очень удобно рисовать и так же просто подсвечивать невидимую надпись.\n\n

   Отлично рисует на коже человека, так же на дереве, пластике, металле, ткани, картоне и пр.\n
   При нанесении УФ меток визуально их вовсе не будет заметно. Только при воздействии УФ фонарика Вы сможете определить метку или надпись. Подсвечивается моментально бирюзовым свечением. \n\n

   Используется для пометки купюр, скрытой маркировки, для проведения квестов и т. д. \n
Ультрафиолетовые маркеры хорошо работают, не сохнут, стойкие к различным воздействиям.</string>
    <string name="feedback_name">Имя</string>
    <string name="feedback_number">Номер телефона</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_details">Детали заказа</string>
    <string name="feedback_send">Заказать обратный звонок</string>
    <string name="feedback_sent">Сообщение отправлено</string>
    <string name="sending">Отправка данных</string>
    <string name="sending_message">Отправляем сообщение...</string>
    <string name="no_connection">Ошибка! Нет соединения с интернетом</string>
</resources>
