<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.hedgehog.luminof.fragment.ContactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/catalog"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/text_title_size" />

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/luminofor_title"
            android:textColor="@color/colorProductTitle"
            android:textSize="@dimen/text_product_size" />

        <TextView
            android:id="@+id/tvLuminofor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/luminofor"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="@dimen/menu_margin"
                android:scaleType="fitXY"
                android:src="@drawable/luminofor_1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/luminofor_2" />

        </LinearLayout>
        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/fluorescent_title"
            android:textColor="@color/colorProductTitle"
            android:textSize="@dimen/text_product_size" />

        <TextView
            android:id="@+id/tvFluorescent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/fluorescent"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fluorescent_1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fluorescent_2" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fluorescent_3" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fluorescent_4" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fluorescent_5" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/lak_title"
            android:textColor="@color/colorProductTitle"
            android:textSize="@dimen/text_product_size" />

        <TextView
            android:id="@+id/tvLak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/lak"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/lak_01" />

        <TextView
            android:id="@+id/tvTitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/detector_title"
            android:textColor="@color/colorProductTitle"
            android:textSize="@dimen/text_product_size" />

        <TextView
            android:id="@+id/tvDetector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/detector"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/detector_1" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/detector_2" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/lampa_title"
            android:textColor="@color/colorProductTitle"
            android:textSize="@dimen/text_product_size" />

        <TextView
            android:id="@+id/tvLampa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/lampa"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/lampa_1" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/lampa_2" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/marker_title"
            android:textColor="@color/colorProductTitle"
            android:textSize="@dimen/text_product_size" />

        <TextView
            android:id="@+id/tvMaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_margin"
            android:text="@string/marker"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/marker_1" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/marker_2" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
